# AVO

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
avo/: __init__.py  cli.py  config.py
avo/agent/: __init__.py  knowledge_base.py  llm_client.py  prompts.py  tools.py  variation_operator.py
avo/core/: __init__.py  evolution.py  population.py  scoring.py  types.py
avo/persistence/: __init__.py  git_backend.py
avo/supervisor/: __init__.py  self_supervision.py
avo/utils/: logging.py
configs/: default.yaml
examples/attention_kernel/: config.yaml  run.py  scorer.py  seed_kernel.py
examples/attention_kernel/knowledge/: cuda_optimization.md  flash_attention.md
examples/sorting_optimization/: config.yaml  run.py  scorer.py  seed.py
examples/sorting_optimization/knowledge/: sorting_algorithms.md
tests/: test_agent.py  test_config.py  test_git_backend.py  test_population.py  test_scoring.py  test_supervisor.py  test_types.py
